# te2350

./: .gitignore  CMakeLists.txt  Makefile  README.md  verify.py
.github/workflows/: build-plugin.yml  deploy-web.yml
include/: audio_driver.h  dsp_delay.h  dsp_fdn.h  dsp_filters.h  dsp_math.h  dsp_melody.h  dsp_modulation.h  dsp_pitch.h  te2350.h
src/: audio_driver.c  audio_i2s.pio  dsp_delay.c  dsp_fdn.c  dsp_filters.c  dsp_melody.c  dsp_modulation.c  dsp_pitch.c  main.c  te2350.c  test_offline.c  ws2812.pio
src/web/: Makefile  index.html  main.js  offline_host.c  te2350-worklet.bundle.js  te2350.js  te2350.wasm  wasm_wrapper.c  worklet.js
te2350-vst/: CMakeLists.txt  README.md
te2350-vst/Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
te2350-vst/Source/Core/: TE2350CoreWrapper.cpp  TE2350CoreWrapper.h
te2350-vst/Source/DSP/: OversamplingChain.cpp  OversamplingChain.h
te2350-vst/Source/Params/: MacroEngine.cpp  MacroEngine.h  ParameterLayout.cpp  ParameterLayout.h
te2350-vst/Source/Presets/: FactoryPresets.cpp  FactoryPresets.h
te2350-vst/Tests/: GoldenReferenceTest.cpp  PluginSmokeTest.cpp
